--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "material-design-icons-iconfont": "^6.7.0",
     "vue": "^2.6.14",
-    "vuetify": "^2.6.12"
+    "vuetify": "^2.6.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
